--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+#Docker environment secrets in docker-compose.yml
+docker-compose.yml
 # C extensions
 *.so
 
