fixed the typo in test_user_api which was missing .com in the test user email

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,15 @@
 # Git
-.git 
+.git
 .gitignore
 
 # Docker
-.docker 
+.docker
 
 # Python
 app/__pycache__/
-app/*/__pycache__
-app/*/*/__pycache__
-app/*/*/*/__pycache__
+app/*/__pycache__/
+app/*/*/__pycache__/
+app/*/*/*/__pycache__/
 .env/
 .venv/
 venv/
