added to README and some comments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   app:
+    image: recipe-app:latest
     build:
       context: .
       args:
@@ -10,8 +11,8 @@ services:
       - ./app:/app
     command: >
       sh -c "python manage.py wait_for_db &&
-        python manage.py migrate &&
-        python manage.py runserver 0.0.0.0:8000"
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment:
       - SECRET_KEY="somesecretnotinproduction"
       - DB_HOST=db
@@ -22,7 +23,7 @@ services:
       - db
 
   db:
-    image: postgres:13-alpine
+    image: postgres:17-alpine
     volumes:
       - dev-db-data:/var/lib/postgresql/data
     environment:
